Fix: The outline of a quoted image should not be cropped. Closes #15.

--- a/packages/ckeditor5-block-quote/theme/blockquote.css
+++ b/packages/ckeditor5-block-quote/theme/blockquote.css
@@ -6,6 +6,10 @@
 .ck-content blockquote {
 	/* See #12 */
 	overflow: hidden;
+
+	/* https://github.com/ckeditor/ckeditor5-block-quote/issues/15 */
+	padding-right: 1.5em;
+
 	padding-left: 1.5em;
 	margin-left: 0;
 	font-style: italic;
